tests/negative/gold/toitdoc4_test.gold
tests/negative/toitdoc4_test.toit:25:11: error: Setters must take exactly one parameter
setter= x y:
          ^
tests/negative/toitdoc4_test.toit:24:7: warning: A setter must take exactly one argument
/// $(setter= x y)
      ^~~~~~
tests/negative/toitdoc4_test.toit:6:2: warning: Unresolved reference 'super'
$super
 ^~~~~
tests/negative/toitdoc4_test.toit:7:3: warning: Unresolved reference 'super'
$(super)
  ^~~~~
tests/negative/toitdoc4_test.toit:13:2: warning: Unresolved reference 'super'
$super
 ^~~~~
tests/negative/toitdoc4_test.toit:14:3: warning: Unresolved reference 'super'
$(super)
  ^~~~~
tests/negative/toitdoc4_test.toit:15:3: warning: Can't resolve reference 'this' with the given shape
$(this)
  ^~~~
tests/negative/toitdoc4_test.toit:19:5: warning: Can't resolve reference 'super' with the given shape
  $(super x)
    ^~~~~
tests/negative/toitdoc4_test.toit:20:5: warning: Can't resolve reference 'this' with the given shape
  $(this)
    ^~~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/toitdoc4_test.toit'
Compilation failed.
